--- a/rmf_demos_dashboard_resources/warehouse/dashboard_config.json
+++ b/rmf_demos_dashboard_resources/warehouse/dashboard_config.json
@@ -7,30 +7,19 @@
     },
     "Loop": {
       "places": [
-        "pose_1",
-        "pose_2",
-        "pose_3",
-        "pose_4",
-        "pose_5",
-        "pose_6",
-        "pose_7",
-        "pose_8",
-        "pose_9",
-        "pose_10",
-        "pose_11",
-        "pose_12",
-        "pose_13",
-        "pose_14",
-        "pose_15",
-        "pose_16",
-        "pose_17",
-        "pose_18",
-        "pose_19",
-        "pose_20",
-        "pose_21",
-        "pose_22",
-        "pose_23",
-        "pose_24"
+        "load1",
+        "load2",
+        "load3",
+        "load4",
+        "load5",
+        "load6",
+        "load7",
+        "load8",
+        "load9",
+        "wait_point_A",
+        "wait_point_B",
+        "end_B",
+        "end_D"
       ]
     },
     "Clean": {
