--- a/rmf_demos_maps/maps/warehouse/warehouse.building.yaml
+++ b/rmf_demos_maps/maps/warehouse/warehouse.building.yaml
@@ -1,7 +1,7 @@
 coordinate_system: reference_image
 crowd_sim:
   agent_groups:
-    - {agents_name: [tinyRobotC, tinyRobotE, tinyRobotD, tinyRobotA, tinyRobotB], agents_number: 5, group_id: 0, profile_selector: external_agent, state_selector: external_static, x: 0, y: 0}
+    - {agents_name: [tinyRobotC, tinyRobotE, tinyRobotD, tinyRobotB], agents_number: 4, group_id: 0, profile_selector: external_agent, state_selector: external_static, x: 0, y: 0}
   agent_profiles:
     - {ORCA_tau: 1, ORCA_tauObst: 0.40000000000000002, class: 1, max_accel: 0, max_angle_vel: 0, max_neighbors: 10, max_speed: 0, name: external_agent, neighbor_dist: 5, obstacle_set: 1, pref_speed: 0, r: 0.25}
   enable: 0
@@ -32,13 +32,11 @@ levels:
       - [44, 49, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [11, 44, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [44, 46, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [4, 43, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [43, 45, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [49, 52, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [9, 48, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [48, 46, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [45, 47, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [47, 5, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [46, 53, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [53, 50, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [48, 54, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
@@ -51,35 +49,54 @@ levels:
       - [57, 47, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [11, 58, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [3, 4, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [49, 53, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [53, 54, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [52, 50, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [50, 51, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [55, 56, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [56, 57, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [43, 59, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [59, 60, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [60, 45, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [47, 61, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [61, 60, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [5, 61, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [59, 4, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [59, 62, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [62, 63, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [63, 60, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [61, 64, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [64, 63, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
     layers:
       {}
     measurements:
       - [0, 1, {distance: [3, 2.5]}]
+      - [16, 17, {distance: [3, 1]}]
     vertices:
-      - [431.12200000000001, 84.350999999999999, 0, ""]
-      - [431.10599999999999, 132.048, 0, ""]
-      - [323.91199999999998, 38.930999999999997, 0, end_C, {is_holding_point: [4, true]}]
-      - [393.173, 108.01300000000001, 0, start_C, {is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobotC], spawn_robot_type: [1, TinyRobot]}]
-      - [323.553, 108.193, 0, wait_point_D]
-      - [323.15499999999997, 324.096, 0, wait_point_C]
-      - [393.18099999999998, 323.93599999999998, 0, start_E, {is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobotE], spawn_robot_type: [1, TinyRobot]}]
-      - [323.572, 393.26100000000002, 0, end_E, {is_holding_point: [4, true]}]
+      - [523.774, 87.129999999999995, 0, ""]
+      - [523.774, 148.08799999999999, 0, ""]
+      - [369.06, 17.559000000000001, 0, end_C, {is_holding_point: [4, true]}]
+      - [493.91800000000001, 108.33799999999999, 0, start_C, {is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobotC], spawn_robot_type: [1, TinyRobot]}]
+      - [370.05399999999997, 106.014, 0, wait_point_D]
+      - [369.41399999999999, 328.20100000000002, 0, wait_point_C]
+      - [496.983, 326.78699999999998, 0, start_E, {is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobotE], spawn_robot_type: [1, TinyRobot]}]
+      - [368, 405.23700000000002, 0, end_E, {is_holding_point: [4, true]}]
       - [38.707000000000001, 323.94799999999998, 0, start_D, {is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobotD], spawn_robot_type: [1, TinyRobot]}]
-      - [107.92, 323.93900000000002, 0, wait_point_B]
+      - [109.327, 324.33600000000001, 0, wait_point_B]
       - [108.352, 393.26900000000001, 0, end_D, {is_holding_point: [4, true]}]
       - [108.29600000000001, 108.285, 0, wait_point_A]
       - [38.887, 108.285, 0, start_B, {is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true], spawn_robot_name: [1, tinyRobotB], spawn_robot_type: [1, TinyRobot]}]
-      - [333.84699999999998, 132.048, 0, ""]
-      - [335.26100000000002, 214.49000000000001, 0, ""]
-      - [332.98899999999998, 299.82999999999998, 0, ""]
-      - [431.22899999999998, 299.82999999999998, 0, ""]
-      - [431.22899999999998, 347.41699999999997, 0, ""]
-      - [347.70600000000002, 347.41699999999997, 0, ""]
-      - [347.70600000000002, 431.553, 0, ""]
-      - [299.99599999999998, 431.553, 0, ""]
-      - [299.99599999999998, 333.06700000000001, 0, ""]
-      - [209.01499999999999, 333.00599999999997, 0, ""]
-      - [131.97, 333.435, 0, ""]
+      - [431.64499999999998, 147.15199999999999, 0, ""]
+      - [432.00599999999997, 211.36500000000001, 0, ""]
+      - [432.33699999999999, 283.255, 0, ""]
+      - [528.89300000000003, 282.78699999999998, 0, ""]
+      - [528.03999999999996, 349.32499999999999, 0, ""]
+      - [389.98700000000002, 348.32999999999998, 0, ""]
+      - [390.55599999999998, 432.49799999999999, 0, ""]
+      - [323.673, 431.34300000000002, 0, ""]
+      - [324.33600000000001, 346.86399999999998, 0, ""]
+      - [219.316, 348.51999999999998, 0, ""]
+      - [132.84800000000001, 347.85700000000003, 0, ""]
       - [131.97, 431.30700000000002, 0, ""]
       - [84.501999999999995, 431.416, 0, ""]
       - [84.501999999999995, 347.827, 0, ""]
@@ -94,27 +111,33 @@ levels:
       - [84.415000000000006, 0.79100000000000004, 0, ""]
       - [132.08500000000001, 0.79100000000000004, 0, ""]
       - [132.08500000000001, 99.555999999999997, 0, ""]
-      - [209.01499999999999, 99.837000000000003, 0, ""]
-      - [300.02800000000002, 98.870999999999995, 0, ""]
-      - [300.02800000000002, 0.65400000000000003, 0, ""]
-      - [347.56099999999998, 0.65400000000000003, 0, ""]
-      - [347.56099999999998, 84.350999999999999, 0, ""]
-      - [322.49799999999999, 157.446, 0, lane_1r]
+      - [212.69, 98.394000000000005, 0, ""]
+      - [328.97399999999999, 96.406000000000006, 0, ""]
+      - [329.13600000000002, 1.4219999999999999, 0, ""]
+      - [401.19600000000003, 0.99399999999999999, 0, ""]
+      - [403.18299999999999, 83.816999999999993, 0, ""]
+      - [322.67899999999997, 154.714, 0, load10]
       - [109.108, 159.268, 0, lane_1l]
-      - [322.62099999999998, 218.29300000000001, 0, lane_2r]
+      - [320.29399999999998, 219.00700000000001, 0, load11]
       - [109.607, 218.667, 0, lane_2l]
-      - [323.60899999999998, 281.928, 0, lane_3r]
+      - [320.64699999999999, 281.90800000000002, 0, load12]
       - [108.952, 279.48599999999999, 0, lane_3l]
       - [161.893, 158.893, 0, load1]
       - [217.05000000000001, 219.70699999999999, 0, load5]
-      - [217.55199999999999, 279.45499999999998, 0, load8]
-      - [218.173, 158.02000000000001, 0, load2]
+      - [216.99700000000001, 281.26799999999997, 0, load8]
+      - [217.328, 157.364, 0, load2]
       - [162.268, 218.54300000000001, 0, load4]
-      - [159.48099999999999, 280.60399999999998, 0, load7]
-      - [272.20699999999999, 156.64699999999999, 0, load3]
-      - [270.959, 219.91499999999999, 0, load6]
-      - [272.45600000000002, 282.10199999999998, 0, load9]
-      - [107.815, 39.183999999999997, 0, end_B, {dock_name: [1, end_B]}]
+      - [161.97999999999999, 279.78800000000001, 0, load7]
+      - [269.34100000000001, 155.04499999999999, 0, load3]
+      - [267.35300000000001, 219.316, 0, load6]
+      - [267.02199999999999, 281.26799999999997, 0, load9]
+      - [107.913, 21.114000000000001, 0, end_B, {dock_name: [1, end_B]}]
+      - [369.39100000000002, 153.38900000000001, 0, load13]
+      - [369.767, 216.886, 0, load14]
+      - [370.12, 280.84800000000001, 0, load15]
+      - [416.435, 153.38900000000001, 0, load16]
+      - [417.09800000000001, 214.346, 0, load17]
+      - [417.82600000000002, 280.14100000000002, 0, load18]
     walls:
       - [1, 13, {alpha: [3, 1], texture_height: [3, 2.5], texture_name: [1, default], texture_scale: [3, 1], texture_width: [3, 1]}]
       - [13, 14, {alpha: [3, 1], texture_height: [3, 2.5], texture_name: [1, default], texture_scale: [3, 1], texture_width: [3, 1]}]
